--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,5 +24,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: darkautism/arduino-toolchain:latest
